--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.24.0",
     "html-webpack-plugin": "^2.30.1",
     "moment": "^2.18.1",
+    "rx-dom": "^7.0.3",
     "rxjs": "^5.3.0",
     "script-ext-html-webpack-plugin": "^1.8.8",
     "webpack": "^2.3.2"
