--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^2.30.1",
     "moment": "^2.18.1",
     "rx-dom": "^7.0.3",
     "rxjs": "^5.3.0",
     "script-ext-html-webpack-plugin": "^1.8.8",
+    "style-loader": "^0.21.0",
     "webpack": "^2.3.2"
   },
   "devDependencies": {
