add react-emotion, add react 16.7, minor code refactor

--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
     "@babel/preset-react",
   ],
   "plugins": [
+    ["emotion"],
     ["@babel/transform-runtime", {
       "regenerator": true
     }],
