--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
+    "babel-plugin-emotion": "^9.2.11",
     "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-named-asset-import": "^0.2.2",
@@ -23,6 +24,7 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "emotion": "^9.2.12",
     "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.5",
     "eslint-loader": "2.1.1",
@@ -46,10 +48,10 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.6.0",
+    "react": "^16.7.0-alpha.0",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.0",
-    "react-dom": "^16.6.0",
+    "react-dom": "^16.7.0-alpha.0",
     "react-emotion": "^9.2.12",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
