--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@babel/plugin-transform-async-to-generator": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
     "@reach/router": "^1.2.1",
     "@svgr/webpack": "2.4.1",
     "babel-core": "7.0.0-bridge.0",
